--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Account/Register.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Account/Register.cshtml
@@ -1,18 +1,18 @@
-﻿@model AdminstrationSysytem_v1.Models.StudentViewModel
+﻿@model AdminstrationSysytem_v1.Models.JoinViewModel
 
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Register</h2>
-
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>StudentViewModel</h4>
+        <h4>JoinViewModel</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -40,18 +40,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Fname, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Fname, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Fname, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Lname, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Lname, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Lname, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -63,6 +55,25 @@
             </div>
         </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.BirthDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.Label("Who are you ?", htmlAttributes: new { @class = "control-label col-md-2" })
+            @{ var AccessType = Enum.GetValues(typeof(AdminstrationSysytem_v1.Models.JoinViewModel.AccessType)); }
+            <div class="col-md-10">
+                @foreach (var item in AccessType)
+                {
+                    @Html.RadioButtonFor(m => item,item.ToString(), new { htmlAttributes = new { @class = "form-control" } })  @:@item.ToString()
+                    @Html.ValidationMessageFor(model => model.UserType, "", new { @class = "text-danger" })
+                }
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -75,7 +86,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
