--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Home/Index.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Home/Index.cshtml
@@ -2,6 +2,22 @@
     ViewBag.Title = "Home Page";
 }
 
+
+@ViewBag.profile
+    @if (ViewBag.profile == "Student")
+    {
+        @section profile {
+             @Html.ActionLink("Profile", "Students", "UserProfile")
+        }
+    }
+    else if (ViewBag.profile == "Instructor")
+    {
+        @section profile {
+           @Html.ActionLink("Profile", "Instructors", "UserProfile")
+        }
+    }
+
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
