--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -30,7 +32,6 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     @if (TempData.Count != 0)
                     {
                         if (TempData.ContainsKey("Student"))
@@ -44,6 +45,7 @@
                         else if (TempData.ContainsKey("Admin"))
                         {
                             <li>@Html.ActionLink("Admin Profile", "UserProfile", "Instructors", Admin)</li>
+                            <li>@Html.ActionLink("Students", "StudentsList", "Students")</li>
                         }
                     }
                 </ul>
