Activation Student Enabled [Updated]

--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/StudentsList.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/StudentsList.cshtml
@@ -41,11 +41,11 @@
             <tr>
                
                 <td>
-                    @if (item.IsActivated)
+                    @if (item.IsActivated == true)
                     {
                         <input type="checkbox" name="@item.Name" value="@item.Name" checked="checked" />
                     }
-                    else
+                    else if (item.IsActivated == false)
                     {
                         <input type="checkbox" name="@item.Name" value="@item.Name"/>
                     }
