--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -87,8 +87,11 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+        <script src="~/Scripts/jquery-1.10.2.js"></script>
+        <script src="~/Scripts/bootstrap.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
