--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/StudentsList.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/StudentsList.cshtml
@@ -6,89 +6,29 @@
 }
 
 <h2>StudentsList</h2>
-<form method="post" action="~/Students/ActivateAccounts">
-    <table id="example" class="table">
-        <tr>
-            <th>
-                @Html.DisplayName("Activate Account")
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UserName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BD)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Departments.Name)
-            </th>
-            <th></th>
-        </tr>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-               
-                <td>
-                    @if (item.IsActivated == true)
-                    {
-                        <input type="checkbox" name="@item.Name" value="@item.Name" checked="checked" />
-                    }
-                    else if (item.IsActivated == false)
-                    {
-                        <input type="checkbox" name="@item.Name" value="@item.Name"/>
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PhoneNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UserName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Address)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BD)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Departments.Name)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </td>
-            </tr>
-        }
+@using (Ajax.BeginForm("ActivateAccounts", "Students",
+                    new AjaxOptions
+                   {
+         HttpMethod = "POST",
+       InsertionMode = InsertionMode.Replace,
+     UpdateTargetId = "StudentTable",
+    Confirm = "jk?",
 
 
 
+ }
+ ))
+{
+    <div id="StudentTable">
+        @Html.Partial("List")
+    </div>
+    <input type="submit" class="btn btn-info" />
+}
+   
 
 
-    </table>
 
-    @Html.ActionLink("Add New Student To The List !", "StudentsList", "Students", new { @class = "btn btn-warning" })
-    <input type="submit" class="btn btn-info" /> 
-
-</form>
 
 
 
