Admin Student List

--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/List.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/List.cshtml
@@ -11,22 +11,16 @@
             @Html.DisplayNameFor(model => model.Email)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayName("Birth-Date")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.BD)
+            @Html.DisplayName("Department")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Departments.Name)
+            @Html.DisplayName("Access")
         </th>
         <th></th>
     </tr>
@@ -48,16 +42,7 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BD)
