--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/UpdateStudentData.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/UpdateStudentData.cshtml
@@ -6,7 +6,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Edit - </h4>
+                <h4 class="modal-title"><i class="fa fa-id-card" aria-hidden="true"></i> Edit - @Model.Name </h4>
             </div>
             <div class="modal-body">
                 <div class="form-group">
