--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -47,6 +47,14 @@
                         {
                             <li>@Html.ActionLink("Admin Profile", "UserProfile", "Instructors", Admin)</li>
                             <li>@Html.ActionLink("Students", "StudentsList", "Students")</li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Studnts Panel<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li>@Html.ActionLink("Students", "StudentsList", "Students")</li>
+                                    <li>@Html.ActionLink("Students", "StudentsList", "Students")</li>
+                                    <li>@Html.ActionLink("Students", "StudentsList", "Students")</li>
+                                </ul>
+                            </li>
                         }
                     }
                 </ul>
