--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Instructors/GivePermissionList.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Instructors/GivePermissionList.cshtml
@@ -1,8 +1,6 @@
 ﻿@model IEnumerable<AdminstrationSysytem_v1.Models.AttendanceModel>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
@@ -32,7 +30,7 @@
             }
             else
             {
-                <input type="checkbox" name="@item.name" value="@item.name" />
+                <input type="checkbox" name="@item.name" value="@item.id" />
             }
         </td>
         <td>
