--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Instructors/GivePermission.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Instructors/GivePermission.cshtml
@@ -8,7 +8,7 @@
 <h2 style="text-align:center">Permissions Sheet</h2>
 
 <br />
-@using (Ajax.BeginForm("GivePermission", "Instructors",
+@using (Ajax.BeginForm("AcceptPermissions", "Instructors",
   new AjaxOptions
   {
       HttpMethod = "POST",
@@ -21,7 +21,7 @@
     <div id="StudentTable">
         @Html.Partial("GivePermissionList")
     </div>
-    <input type="submit" class="btn btn-info" />
+    <input type="submit" class="btn btn-warning" value="Done" />
 }
 
 
