Attendance Is Completly Done
- Show report for the student who attended in a specific date
- Show attendance of a student in a period of dates
- Show permissions of a student in period

--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Attendance/Reportabsenceinperiod.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Attendance/Reportabsenceinperiod.cshtml
@@ -57,7 +57,7 @@
 
 @section scripts{
     <script src="~/Scripts/jquery-ui-1.12.1.js"></script>
-    <script src="~/Scripts/bootstrap-datepicker.js"></script>
+<script src="~/Scripts/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript">
 
     </script>
