--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @RenderSection("OptionalScripts", required: false)
     <script src="https://use.fontawesome.com/4415e5a123.js"></script>
 
 </head>
