--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/Evalute.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/Evalute.cshtml
@@ -7,65 +7,113 @@
 
 <h2>Evalute</h2>
 
-@section OptionalScripts{
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<link href="~/Content/Star-Style.css" rel="stylesheet" />
-    
-<script src="~/Scripts/Star-Dierctive.js"></script>
+
+
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Course.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Department.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Instructor.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CourseStatues)
+        </th>
+        <th>
+            @Html.DisplayName("Evaluation")
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Course.Name)
+                <input type="hidden" value=@item.Course.CoursId id="crs" name=@item.Instructor.Id />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Department.Name)
+                <input type="hidden" value=@item.Department.DepartmentId name="deps" />
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Instructor.Name)
+                <input type="hidden" value=@item.Instructor.Id name="ins" />
+            </td>
+            <td>
+                @if (item.CourseStatues == 1)
+                {
+                    <p>Done</p>
+                }
+                else
+                {
+                    <p>OnProgress</p>
+                }
+            </td>
+            <td>
+                <select name=@item.Instructor.Id id=@item.Course.CoursId class="form-control" Customattr="Amir">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                </select>
+            </td>
+
+        </tr>
+    }
+
+</table>
+<input type="button" value="Evalute" id="Submit" class="btn btn-danger" />
+
+
+
+
+@section scripts {
+    <script>
+        $(document).ready(function () {
+            var Instructors = [];
+            var TravillingList = [];
+            var obj = {};
+
+
+            $('select[Customattr]').change(function() {
+                obj = {
+                    InstructorID : $(this).attr("name"),
+                    CourseID : $(this).attr("id"),
+                    EvaluationValue : $(this).val()
+                }
+
+                TravillingList.push(obj);
+                $(this).prop("disabled", true);
+
+            });
+
+            $("#Submit").click(function () {
+
+                var Data = JSON.stringify(TravillingList);
+
+                $.ajax({
+                    contentType: 'application/json; charset=utf-8',
+                    type: 'POST',
+                    url: '/Students/EvaluteInstructors',
+                    data: Data,
+                    success: function (data) {
+                        window.location.href = "/Home/Index"
+                    },
+                    failure: function (response) {
+                        console.log("Fail");
+                    }
+                });
+
+
+
+            });
+        });
+    </script>
 }
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-    <table class="table" ng-app="app" ng-controller="RatingController as rating" class="container" >
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Course.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Instructor.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CourseStatues)
-            </th>
-            <th>
-                @Html.DisplayName("Evaluation")
-            </th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Course.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Department.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Instructor.Name)
-                </td>
-                <td>
-                    @if (item.CourseStatues == 1)
-                    {
-                        <p>Done</p>
-                    }
-                    else
-                    {
-                        <p>OnProgress</p>
-                    }
-                </td>
-                <td>
-                    <div >
-                        <div star-rating ng-model="rating.rating"+'1'" max="10" on-rating-select="rating.rateFunction(rating)"></div>
-                    </div>
-                </td>
-
-            </tr>
-        }
-
-        </table>
 
