--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/Evalute.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/Evalute.cshtml
@@ -84,7 +84,7 @@
                 obj = {
                     InstructorID : $(this).attr("name"),
                     CourseID : $(this).attr("id"),
-                    EvaluationValue : $(this).val()
+                    EvaluationDegree: $(this).val()
                 }
 
                 TravillingList.push(obj);
