Student Evaluation For Instructors Done
layout Updates

--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
                         if (TempData.ContainsKey("Student"))
                         {
                             <li>@Html.ActionLink("Student Profile", "UserProfile", "Students", Student)</li>
+                            <li>@Html.ActionLink("Evalute Instructors", "Evalute", "Students", Student)</li>
                         }
                         else if (TempData.ContainsKey("Instructor"))
                         {
