--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/SubmitToDepartment.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/SubmitToDepartment.cshtml
@@ -20,7 +20,7 @@
 }
 
 
-<form method="POST" action="/Attendance/Attendance">
+<form method="POST" action="/Students/ToggleStudentDepartmentState">
     <input type="hidden" id="DepId" name="DeptId" value="" />
     <div id="LoadHere">
 
