Upload Data From External Source  - Excel File
- Attendance Updates

--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -59,6 +59,7 @@
                                     <li>@Html.ActionLink(" Quartz library resposible for calling this action daily", "Claculatebsence", "Attendance")</li>
                                      @*RepoertAttendanceTaskSchedular Class in Models*@
                                     <li>@Html.ActionLink("Students", "StudentsList", "Students")</li>
+                                    <li>@Html.ActionLink("Students", "SubmitToDepartment", "Students")</li>
                                 </ul>
                             </li>
                         }
