--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
                         else if (TempData.ContainsKey("Instructor"))
                         {
                             <li>@Html.ActionLink("Instructor Profile", "UserProfile", "Instructors", Instructor)</li>
+                            <li>@Html.ActionLink("Permissions", "GivePermission", "Instructors", Instructor)</li>
                         }
                         else if (TempData.ContainsKey("Admin"))
                         {
