--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/StudentsList.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/StudentsList.cshtml
@@ -44,6 +44,7 @@
 
 
 @section scripts {
+@Scripts.Render("~/bundles/jqueryval")
 <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script>
         function togglemodel() {
