--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/CraeteStudentData.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/CraeteStudentData.cshtml
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-default" >Close</button>
+                        <button type="submit" class="btn btn-default" data-dismiss="modal" >Close</button>
                     </div>
                 </div>
 }
