--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/UpdateStudentData.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Students/UpdateStudentData.cshtml
@@ -8,34 +8,60 @@
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title"><i class="fa fa-id-card" aria-hidden="true"></i> Edit - @Model.Name </h4>
             </div>
-            <div class="modal-body">
-                <div class="form-group">
-                    <label for="Name" class="col-sm-2 control-label">@Model.Name</label>
-                </div>
-                <div class="form-group">
-                    <label for="Birthdate" class="col-sm-2 control-label">Birthdate</label>
-                    <div>
-                        <input type="text" class="form-control" placeholder="Birthdate" id="">
+
+            @using (Ajax.BeginForm("UpdateStudentData", "Students",
+                                            new AjaxOptions
+                                            {
+                                                HttpMethod = "POST",
+                                                InsertionMode = InsertionMode.Replace,
+                                                UpdateTargetId = "StudentTable"
+                                            }
+                         ))
+            {
+                <div class="modal-body">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div>
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Name, Model.Name , new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div>
+                            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Email, Model.Email, new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.Label("Dept", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div>
+                            @Html.DropDownList("department", (IEnumerable<SelectListItem>)ViewBag.Deps, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div>
+                            @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Address, Model.Address, new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.BD, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div>
+                            @Html.EditorFor(model => model.BD, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.BD, Model.Address, new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-default" data-dismiss="modal">Update</button>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="Address" class="col-sm-2 control-label">Address</label>
-                    <div>
-                        <input type="text" class="form-control" placeholder="Address" id="">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Sign in</button>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default"  data-dismiss="modal">Close</button>
-            </div>
+            }
         </div>
-
     </div>
-</div>
-
+    </div>
 
