--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Home/Index.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Home/Index.cshtml
@@ -5,9 +5,8 @@
     //var Studnet = TempData["Student"] as Student;
     //var Instructor = TempData["Instructor"] as Instructors;
 }
-<p> Student </p>
-<p> Student </p>
-
+<br />
+<br />
 
 @*@if (TempData.Count != 0)
 {
@@ -28,29 +27,28 @@
 
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h2 style="text-align:center;">Infromation Technology Institute </h2><br />
+    <p class="lead" style="font-weight:bold" >" The day to day cooperation between the ITI and the University of Paderborn works very smoothly and successfully. I’m very proud of our joint protocol that I consider the best we have in the region, I deeply appreciate your visionary power and your straight ahead mentality."
+</p>
+    <p><a href="http://www.iti.gov.eg/" class="btn btn-primary btn-lg">ITI &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+        <h2>Outreach</h2>
+        <p class="alert alert-success">
+            ITI introduced SHAPE IT to dig deeper in the dynamic community sectors, SHAPE IT breaks down to Safety, Health, Agriculture, Power, Education, and Information Technology. With the methodology of "Investigate - Ideate - Innovate - Communicate", the ITI interns first Investigate what the existing developmental problems are, then ideate & innovate by developing innova.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://www.iti.gov.eg/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Outreach</h2>
+        <p class="alert alert-success">ITI introduced SHAPE IT to dig deeper in the dynamic community sectors, SHAPE IT breaks down to Safety, Health, Agriculture, Power, Education, and Information Technology. With the methodology of "Investigate - Ideate - Innovate - Communicate", the ITI interns first Investigate what the existing developmental problems are, then ideate & innovate by developing innova.</p>
+        <p><a class="btn btn-default" href="http://www.iti.gov.eg/">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Outreach</h2>
+        <p class="alert alert-success">YITI introduced SHAPE IT to dig deeper in the dynamic community sectors, SHAPE IT breaks down to Safety, Health, Agriculture, Power, Education, and Information Technology. With the methodology of "Investigate - Ideate - Innovate - Communicate", the ITI interns first Investigate what the existing developmental problems are, then ideate & innovate by developing innova.</p>
+        <p><a class="btn btn-default" href="http://www.iti.gov.eg/">Learn more &raquo;</a></p>
     </div>
 </div>
