--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default  navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -28,12 +28,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Information Technology Institute", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li><a href="https://github.com/AlameerAshraf">About</a></li>
                     @if (TempData.Count != 0)
                     {
                         if (TempData.ContainsKey("Student"))
@@ -100,7 +99,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Information Technology Institute</p>
         </footer>
     </div>
     <script src="~/Scripts/jquery-1.12.4.js"></script>
